--- a/prspr/app.json
+++ b/prspr/app.json
@@ -21,7 +21,11 @@
       "**/*"
     ],
     "ios": {
+      "bundleIdentifier": "com.appliaison.mobile.ios.prspr",
       "supportsTablet": true
+    },
+    "android": {
+      "package": "com.appliaison.mobile.android.prspr"
     }
   }
 }
